Fix add'l IE7 issue for #1201 by reducing widths below 100%. Eliminate various extra whitespace in expanded tag.

--- a/public/stylesheets/winnow.css
+++ b/public/stylesheets/winnow.css
@@ -1214,7 +1214,7 @@ body#item_caches .item_cache {
 
 .tag .extended .comments {
   float: left;
-  width: 70%;
+  width: 69%;
   padding-top: 0.5em;
 }
 
@@ -1228,7 +1228,7 @@ body#item_caches .item_cache {
 
 .tag .extended .comment {
   position: relative;
-  margin: 0 1.5em 0.5em 0;
+  margin: 0 0 0.5em 0;
   border-top: 1px solid #C0C7CD;
 }
 
@@ -1249,7 +1249,6 @@ body#item_caches .item_cache {
 }
 
 .tag .extended .comment .metadata .actions a.edit {
-  margin-right: 0.5em;
 }
 
 .tag .extended .comment .body {
@@ -1298,18 +1297,18 @@ body#item_caches .item_cache {
 
 .tag .extended .sidebar {
   float: right;
-  width: 30%;
+  width: 29%;
   padding-top: 0.5em;
 }
 
 .tag .extended .sidebar .block {
-  margin-bottom: 1.5em;
   padding: 1em 1em 0.4em;
 }
 
 .tag .extended .sidebar .actions, 
 .tag .extended .sidebar .stats {
   background-color: #F2F2F2;
+  border-top: 1px solid #ccc;
 }
 
 .tag .extended .sidebar .actions input {
@@ -1364,7 +1363,6 @@ body#item_caches .item_cache {
 }
 
 .tag ul.controls .slider_control {
-  border-bottom: 1px solid #ccc;
   padding-bottom: 1.5em;
   margin-bottom: .5em;
 }
@@ -1418,7 +1416,6 @@ body#item_caches .item_cache {
 }
 
 .tag .extended .comment_form {
-  margin-right: 1.5em;
   padding: 0.75em 1em 0.75em 0.75em;
   background-color: #F2F2F2;
 }
